@@ -7,6 +7,7 @@ Update conditions
 Fix new SAVi clashes
 Update print-friendly new SAVi
 Update transaction table fonts
+Display narrative for non-dac sector in transaction tables
 
 
 Development Portal (2020-04-18 shi)
